Added samples